--- a/3Mongo/ExerciceKickStarter.ipynb
+++ b/3Mongo/ExerciceKickStarter.ipynb
@@ -617,7 +617,7 @@
     }
    ],
    "source": [
-    "list(collection.find().sort([(\"usd_pledged_real\", -1)]).limit(5))"
+    "list(d.sort([(\"usd_pledged_real\", -1)]).limit(5))"
    ]
   },
   {
